# sem3_hws

./: .gitignore
dl_homework/hw_1/: pytorch_lightning_classification.ipynb
mlops_homework/hw1/: .pre-commit-config.yaml  dvc.yaml  params.yaml  pyproject.toml
mlops_homework/hw1/src/: evaluate.py  validate_model.py
mlops_homework/hw2/step4_monitoring/: README.md  main.py
mlops_homework/hw2/step4_monitoring/config/: monitoring_config.yaml
mlops_homework/hw2/step4_monitoring/src/: config.py  logger.py  monitor.py
nlp_homework/hw_1/: hw1.ipynb
